@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.100 2004/08/09 21:31:29 freckle Exp $
+$Id: ChangeLog,v 1.101 2004/08/11 20:08:34 freckle Exp $
+
+2004-08-11  Matthias Ringwald <mringwal@inf.ethz.ch>
+    * dev/unix_devs.c: removed a potential dead lock,
+    and now initialized a pthread_mutex before usage
 
 2004-08-09  Matthias Ringwald <mringwal@inf.ethz.ch>
     * dev/unix_devs.c, include/dev/unix_devs.c, include/arch/unix.h:
